product category service and funct created

--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -1,5 +1,6 @@
 <ul>
   <li *ngFor="let p of products">
-      {{ p?.name }}
+para llamar también a las categorias, y machearlo con la correcta dentro de este bucle de productos?
+    {{ p?.name }} - {{ p.price }}
   </li>
 </ul>
