--- a/src/app/pages/layout/header/header.component.html
+++ b/src/app/pages/layout/header/header.component.html
@@ -2,4 +2,7 @@
   <li>
     <a routerLink="/admin/product">Product</a>
   </li>
+  <li>
+    <a routerLink="/admin/product-category">Product category</a>
+  </li>
 </ul>
