--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -1,6 +1,2 @@
-<ul>
-  <li *ngFor="let p of products">
-para llamar también a las categorias, y machearlo con la correcta dentro de este bucle de productos?
-    {{ p?.name }} - {{ p.price }}
-  </li>
-</ul>
+<router-outlet></router-outlet>
+
