--- a/src/app/components/product/product-crud/product-crud.component.html
+++ b/src/app/components/product/product-crud/product-crud.component.html
@@ -1,1 +1,31 @@
 <p>product-crud works!</p>
+
+<form [formGroup]="productForm">
+  <div>
+    <label>Name: </label>
+    <input formControlName="name">
+  </div>
+
+  <div>
+    <label>Description: </label>
+    <textarea formControlName="description"></textarea>
+  </div>
+
+  <div>
+    <label>Price: </label>
+    <input type="number" formControlName="price">
+  </div>
+
+  <div>
+    <label>image: </label>
+    <input formControlName="image">
+  </div>
+
+  <div>
+    <label>sku: </label>
+    <input formControlName="sku">
+  </div>
+
+  <button type="submit" (click)="submitProduct()" [disabled]="!productForm.valid">Subir un producto</button>
+
+</form>
