product detail created

--- a/src/app/components/product-category/product-category-crud/product-category-crud.component.html
+++ b/src/app/components/product-category/product-category-crud/product-category-crud.component.html
@@ -15,8 +15,8 @@
   </div>
 
   <div>
-    <label>sku: </label>
-    <input formControlName="sku">
+    <label>ParentCode: </label>
+    <input type="number" formControlName="parentCode">
   </div>
 
   <button type="submit" (click)="submitForm()" [disabled]="!productCategoryForm.valid">Subir un producto</button>
