--- a/src/app/components/product-category/product-category-list/product-category-list.component.html
+++ b/src/app/components/product-category/product-category-list/product-category-list.component.html
@@ -1,3 +1,9 @@
 <p>product-category-list works!</p>
 
-<button (click="goToNewProductCategory()")>Nueva categoria</button>
+<ul>
+  <li *ngFor="let category of productCategories">
+    <span>{{ category?.name }}</span>
+  </li>
+</ul>
+
+<button (click)="goToNewProductCategory()">Nueva categoria</button>
