--- a/src/app/components/product/product-detail/product-detail.component.html
+++ b/src/app/components/product/product-detail/product-detail.component.html
@@ -1,3 +1,5 @@
 <span>{{ product?.name }}</span>
 <span>{{ productCategory?.name }}</span>
-<span>{{ product?.price }}</span>
+<!--span>{{ product?.price }}</span-->
+
+<div app-price [data]="dataPrice"></div>
