--- a/src/app/components/product/product-detail/product-detail.component.html
+++ b/src/app/components/product/product-detail/product-detail.component.html
@@ -3,3 +3,5 @@
 <!--span>{{ product?.price }}</span-->
 
 <div app-price [data]="dataPrice"></div>
+
+<button app-button (click)="goToEdit()" [data]="{text: 'Editar'}"></button>
