product crud OK edit, delete, login logout OK

--- a/src/app/components/product/product-detail/product-detail.component.html
+++ b/src/app/components/product/product-detail/product-detail.component.html
@@ -5,3 +5,4 @@
 <div app-price [data]="dataPrice"></div>
 
 <button app-button (click)="goToEdit()" [data]="{text: 'Editar'}"></button>
+<button app-button (click)="delete()" [data]="{text: 'Borrar'}"></button>
