--- a/src/app/components/product/product-list/product-list.component.html
+++ b/src/app/components/product/product-list/product-list.component.html
@@ -1,7 +1,7 @@
 <app-subheader [data]="dataSubheader" (onBack)="goBack()"></app-subheader>
 
 <mat-list>
-  <mat-list-item *ngFor="let product of products" (click)="goToProductDetail(product?.id)">
+  <mat-list-item *ngFor="let product of products" (click)="goToProductDetail(product?.name)">
       <span>{{ product?.name }}</span>
       <span>{{ product?.price }}</span>
   </mat-list-item>
