login, logout test styles added

--- a/src/app/pages/layout/header/header.component.html
+++ b/src/app/pages/layout/header/header.component.html
@@ -6,9 +6,9 @@
     <a routerLink="/admin/product-category">Product category</a>
   </li>
   <li *ngIf="!isLogged">
-    <a routerLink="/login">Login</a>
+    <a routerLink="/login" ngClass="login">Login</a>
   </li>
   <li *ngIf="isLogged">
-    <a (click)="logout()">Logout</a>
+    <a (click)="logout()" ngClass="logout">Logout</a>
   </li>
 </ul>
