--- a/src/app/pages/layout/header/header.component.html
+++ b/src/app/pages/layout/header/header.component.html
@@ -5,6 +5,9 @@
   <li>
     <a routerLink="/admin/product-category">Product category</a>
   </li>
+  <li>
+    <a routerLink="/chat">Chat</a>
+  </li>
   <li *ngIf="!isLogged">
     <a routerLink="/login" ngClass="login">Login</a>
   </li>
