--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -1,20 +1,27 @@
-<p>chat works!</p>
-
 <div class="container">
   <div class="chat-wrapper">
-    <div class="chat-messages">
-      <div *ngFor="let chat of chats$ | async">
-        <span>{{ chat?.name }}</span>
-        <p>{{ chat?.msg }}</p>
-        <span class="msg-date">{{ chat?.date | date: 'dd/MM/yyyy HH:mm' }}</span>
-    </div>
-      <div class="chat-actions">
-        <form class="example-form">
-          <label>Mensaje</label>
-          <input type="text" name="text" placeholder="Mensaje" [formControl]="msgForm">
-          <button [disabled]="!msgForm.valid" (click)="sendMessage()">Send</button>
-        </form>
+      <div class="chat-messages">
+          <div *ngFor="let chat of chats$ | async"
+          [ngClass]="{
+            'text-right' : chat?.uid === user?.uid,
+            'text-left' : chat?.uid !== user?.uid
+          }">
+              <span>{{ chat?.name }}</span>
+              <p>{{ chat?.msg }}</p>
+              <span class="msg-date">{{ chat?.date | date: 'dd/MM/yyyy HH:mm' }}</span>
+          </div>
       </div>
-    </div>
+      <div class="chat-actions">
+          <form [formGroup]="msgForm" class="example-form">
+              <label>Mensaje</label>
+<input
+                  type="text"
+                  name="text"
+                  placeholder="Mensaje"
+                  formControlName="msgControl"
+              >
+              <button [disabled]="!msgForm.valid" (click)="sendMessage()">send</button>
+          </form>
+      </div>
   </div>
 </div>
