chat ok, admin and customer roles ok

--- a/src/app/components/product/product-detail/product-detail.component.html
+++ b/src/app/components/product/product-detail/product-detail.component.html
@@ -4,5 +4,5 @@
 
 <div app-price [data]="dataPrice"></div>
 
-<button app-button (click)="goToEdit()" [data]="{text: 'Editar'}"></button>
-<button app-button (click)="delete()" [data]="{text: 'Borrar'}"></button>
+<button *ngIf="isAdmin" app-button (click)="goToEdit()" [data]="{text: 'Editar'}"></button>
+<button *ngIf="isAdmin" app-button (click)="delete()" [data]="{text: 'Borrar'}"></button>
