--- a/src/app/components/product/product-list/product-list.component.html
+++ b/src/app/components/product/product-list/product-list.component.html
@@ -7,4 +7,4 @@
   </mat-list-item>
 </mat-list>
 
-<button app-button [data]="dataButton" (click)="goToNewProduct()"></button>
+<button *ngIf="isAdmin" app-button [data]="dataButton" (click)="goToNewProduct()"></button>
